--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ python_version = "3.5"
 
 [packages]
 
-django = "*"
+django = ">=2.0.11"
 "django-adminlte2" = "*"
 graphviz = "*"
 "beautifulsoup4" = "*"
